[package]
name = "blst_verification_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blst = "0.3.5"
ark-groth16 = "0.3.0"
ark-bls12-381 = "0.3.0"
ark-bn254 = "0.3.0"
ark-std = "0.3.0"
ark-ff ="0.3.0"
ark-relations = "0.3.0"
ark-ec = {version="0.3.0",default-features = false}
blstrs = "0.4.2"
pairing = "0.21.0"
byte-slice-cast = "1.0.0"
